--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "vconsole": "^3.15.1"
+    "vconsole": "^3.15.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
