--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,22 @@
 # frontend
-NEXT_PUBLIC_APP_ENV=local                                         # if value is 'prd' vConsole will be disabled
-NEXT_PUBLIC_THREE_LEGGED_CLIENT_ID=<3-legged-client-id>           # 3 legged client id value from OAPI Portal. Use for initAuth via jsbridge. it must be the same as the `THREE_LEGGED_CLIENT_ID` in backend config
-NEXT_PUBLIC_AUTHENTICATION_SCOPE=openid+offline                   # authentication scope value from OAPI Portal. Use for initAuth via jsbridge. it must be the same as the `AUTHENTICATION_SCOPE` in backend config
+NEXT_PUBLIC_APP_ENV=local                                               # if value is 'prd' vConsole will be disabled
+NEXT_PUBLIC_THREE_LEGGED_CLIENT_ID=<3-legged-client-id>                 # 3 legged client id value from OAPI Portal. Use for initAuth via jsbridge. it must be the same as the `THREE_LEGGED_CLIENT_ID` in backend config
+NEXT_PUBLIC_AUTHENTICATION_SCOPE=openid+offline                         # authentication scope value from OAPI Portal. Use for initAuth via jsbridge. it must be the same as the `AUTHENTICATION_SCOPE` in backend config
 
 # backend
-MINIAPP_UUID=<uuid>                                               # miniapp uuid value from miniapp Portal  
+MINIAPP_UUID=<uuid>                                                     # miniapp uuid value from miniapp Portal  
 ## authentication config                                             
-THREE_LEGGED_CLIENT_ID=<3-legged-client-id>                       # 3 legged client id value from OAPI Portal
-THREE_LEGGED_SECRET_KEY=<3-legged-client-secret>                  # 3 legged secret key value from OAPI Portal
-URL_EXCHANGE_TOKEN=https://example.com/exchange                   # exchange token full url
-URL_GET_CUSTOMER_PROFILE=https://example.com/customer             # get customer profile full url
-AUTHENTICATION_SCOPE=openid+offline                               # authentication scope from OAPI Portal sparated by '+', example: openid+offline
-AUTHENTICATION_REDIRECT_URL=https://your.miniapp                  # redirect url. it must be the same as the authentication redirect url in OAPI Portal and default destination url in miniapp Portal
+THREE_LEGGED_CLIENT_ID=<3-legged-client-id>                             # 3 legged client id value from OAPI Portal
+THREE_LEGGED_SECRET_KEY=<3-legged-client-secret>                        # 3 legged secret key value from OAPI Portal
+ENDPOINT_EXCHANGE_TOKEN=https://oapi.service/exchange                   # OAPI Service endpoint for exchange token
+ENDPOINT_GET_CUSTOMER_PROFILE=https://oapi.service/customer             # OAPI Service endpoint for get customer profile
+AUTHENTICATION_SCOPE=openid+offline                                     # authentication scope from OAPI Portal sparated by '+', example: openid+offline
+AUTHENTICATION_REDIRECT_URL=https://your.miniapp                        # redirect url. it must be the same as the authentication redirect url in OAPI Portal and default destination url in miniapp Portal
 ## payment config
-TWO_LEGGED_CLIENT_ID=<2-legged-client-id>                         # 2 legged client id value from OAPI Portal
-TWO_LEGGED_SECRET_KEY=<2-legged-client-secret>                    # 2 legged secret key value from OAPI Portal
-URL_PAYMENT_GET_TOKEN=https://example.com/oauth/token             # payment get token full url        
-URL_PAYMENT_DEEPLINK=https://example.com/deeplink                 # payment deeplink full url
-URL_PAYMENT_INQUIRY_TRANSACTION_URL=https://example.com/inquiry   # payment inquiry transaction full url
-PAYMENT_TXN_CONFIG_COMP_CODE=00000                                # company code value from OAPI Portal in merchant configuration
-PAYMENT_TXN_CONFIG_DEEPLINK_URL=https://your.miniapp/result       # deeplink url for return to app after payment completed
+TWO_LEGGED_CLIENT_ID=<2-legged-client-id>                               # 2 legged client id value from OAPI Portal
+TWO_LEGGED_SECRET_KEY=<2-legged-client-secret>                          # 2 legged secret key value from OAPI Portal
+ENDPOINT_PAYMENT_GET_TOKEN=https://oapi.service/oauth/token             # OAPI Service endpoint for get 2 legged token        
+ENDPOINT_PAYMENT_DEEPLINK=https://oapi.service/deeplink                 # OAPI Service endpoint for get payment deeplink
+ENDPOINT_PAYMENT_INQUIRY_TRANSACTION_URL=https://oapi.service/inquiry   # OAPI Service endpoint for inquiry transaction
+PAYMENT_TXN_CONFIG_COMP_CODE=00000                                      # company code value from OAPI Portal in merchant configuration
+PAYMENT_TXN_CONFIG_DEEPLINK_URL=https://your.miniapp/result             # deeplink url for return to app after payment completed
