refactor: Update MiniApp UUID in .env.example

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ NEXT_PUBLIC_THREE_LEGGED_CLIENT_ID=<3-legged-client-id>                 # 3 legg
 NEXT_PUBLIC_AUTHENTICATION_SCOPE=openid+offline                         # authentication scope value from OAPI Portal. Use for initAuth via jsbridge. it must be the same as the `AUTHENTICATION_SCOPE` in backend config
 
 # backend
-MINIAPP_UUID=<uuid>                                                     # miniapp uuid value from miniapp Portal  
+MINIAPP_UUID=<uuid>                                                     # App ID value from the MiniApp Portal in the Application Details section.
 ## authentication config                                             
 THREE_LEGGED_CLIENT_ID=<3-legged-client-id>                             # 3 legged client id value from OAPI Portal
 THREE_LEGGED_SECRET_KEY=<3-legged-client-secret>                        # 3 legged secret key value from OAPI Portal
